public class Nodo1 {
    String palabra;
    Nodo1 izquierda;
    Nodo1 derecha;

    public Nodo1(String palabra) {
        this.palabra = palabra;
        this.izquierda = this.derecha = null;
    }
}
